spacing fixes

--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@ a,a:hover, a:active{
 		content: "";
 	    position: absolute;
 	    width: 100%;
-	    height: 520px;
+	    height: 515px;
 	    z-index: -1;
 	    background-color: #2196f3;	
 	}
@@ -192,6 +192,9 @@ a,a:hover, a:active{
 	}
 	div{
 		margin-top: 0;
+	}
+	h1{
+		margin-top: 10px;
 	}
 }
 
